# sprezzos-world

./: .gitignore  Makefile  README  fonts-adobe-sourcesanspro_1.033.orig.tar.bz2  spl  zfs
libxfce4util-4.10.0/libxfce4util/: Makefile.am  Makefile.in  abicheck.sh  libxfce4util-1.0.pc.in  libxfce4util-alias.h  libxfce4util-aliasdef.c  libxfce4util-config.c  libxfce4util-config.h  libxfce4util-config.h.in  libxfce4util-private.c  libxfce4util-private.h  libxfce4util.h  libxfce4util.symbols  make-libxfce4util-alias.pl  xfce-debug.h  xfce-fileutils.c  xfce-fileutils.h  xfce-generics.h  xfce-i18n.c  xfce-i18n.h  xfce-kiosk.c  xfce-kiosk.h  xfce-license.c  xfce-license.h  xfce-miscutils.c  xfce-miscutils.h  xfce-posix-signal-handler.c  xfce-posix-signal-handler.h  xfce-private.h  xfce-rc-config.c  xfce-rc-private.h  xfce-rc-simple.c  xfce-rc.c  xfce-rc.h  xfce-resource.c  xfce-resource.h  xfce-utf8.c  xfce-utf8.h
packaging/aptitude/: AUTHORS  ChangeLog  ChangeLog.SVN  Doxyfile.in  Makefile.am  Makefile.in  NEWS  README  README.BOOST  README.CWIDGET  README.INTERFACES  README.NAMING  README.SMART-POINTERS  README.THREADS  README.i18n  aclocal.m4  aptitude-defaults  aptitude-hackers-guide.txt  aptitude.gl.8  autogen.sh  check_boost.sh  config.h.in  configure  configure.ac
packaging/aptitude/buildlib/: Makefile.am  Makefile.in  doc.mk  docbook.mk  po4a.mk
packaging/aptitude/debian/: 00aptitude  NEWS  README.Debian  aptitude-common.dirs  aptitude-common.install  aptitude-common.links  aptitude-doc-cs.doc-base  aptitude-doc-en.doc-base  aptitude-doc-es.doc-base  aptitude-doc-fi.doc-base  aptitude-doc-fr.doc-base  aptitude-doc-it.doc-base  aptitude-doc-ja.doc-base  aptitude.bug-script  aptitude.dirs  aptitude.install  aptitude.menu  aptitude.postinst  aptitude.postrm  aptitude.prerm  changelog  control  copyright  gbp.conf  rules
packaging/aptitude/doc/: Makefile.am  Makefile.in  aptitude-common.xsl  aptitude-fo.xsl  aptitude-html.xsl  aptitude-man.xsl  aptitude-txt.xsl  aptitude.css  html-to-text
packaging/aptitude/m4/: ChangeLog  Makefile.in  ax_boost_base.m4  ax_boost_iostreams.m4
packaging/aptitude/po/: ChangeLog  Makefile.in.in  Makevars  Makevars.template  POTFILES.ignore  POTFILES.in  POTFILES.in.in  aptitude.pot  ar.po  ast.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  ja.po  km.po  ku.po  lt.po  mr.po  nb.po  ne.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+8 more)
packaging/aptitude/src/: Makefile.am  Makefile.in  apt_config_treeitems.cc  apt_config_treeitems.h  apt_config_widgets.cc  apt_config_widgets.h  apt_info_tree.cc  apt_info_tree.h  apt_options.cc  apt_options.h  apt_undo_tree.cc  apt_undo_tree.h  aptitude.h  broken_indicator.cc  broken_indicator.h  defaults.cc  defaults.h  dep_item.cc  dep_item.h  desc_render.cc  desc_render.h  download_item.cc  download_item.h  download_list.cc  download_list.h  download_thread.cc  download_thread.h  edit_pkg_hier.cc  edit_pkg_hier.h  load_config.cc  load_config.h  load_grouppolicy.cc  load_grouppolicy.h  load_pkgview.cc  load_pkgview.h  load_sortpolicy.cc  load_sortpolicy.h  loggers.cc  loggers.h  main.cc  (+48 more)
packaging/aptitude/tests/: Makefile.am  Makefile.in  boost_test_main.cc  cppunit_test_main.cc  gtest_test_main.cc  interactive_set_test.cc  test_apt_universe.cc  test_choice.cc  test_choice_set.cc  test_cmdline_download_progress_display.cc  test_cmdline_download_status_display.cc  test_cmdline_progress_display.cc  test_cmdline_search_progress.cc  test_config_pusher.cc  test_dense_setset.cc  test_dynamic_list.cc  test_dynamic_set.cc  test_enumerator.cc  test_file_cache.cc  test_incremental_expression.cc  test_logging.cc  test_matching.cc  test_misc.cc  test_parsers.cc  test_promotion_set.cc  test_resolver.cc  test_resolver_costs.cc  test_resolver_hints.cc  test_search_input_controller.cc  test_setset.cc  test_sqlite.cc  test_tags.cc  test_teletype_mock.cc  (+4 more)
packaging/base-passwd/: Makefile.in  config.h.in  configure  configure.ac  update-passwd.c  version.h
packaging/build-essential/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  essential-packages-list-alpha  essential-packages-list-amd64  essential-packages-list-arm  essential-packages-list-armel  essential-packages-list-hppa  essential-packages-list-hurd-i386  essential-packages-list-i386  essential-packages-list-ia64  essential-packages-list-kfreebsd-amd64  essential-packages-list-kfreebsd-i386  essential-packages-list-mips  essential-packages-list-mipsel  essential-packages-list-powerpc  essential-packages-list-s390  essential-packages-list-sh  essential-packages-list-sparc64  list  list2depends  make-esslist.sh
packaging/cdebconf/: Makefile  configure  configure.ac  globalmakeflags.in
packaging/electricsheep/: 16_electricsheep  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  electricsheep-preferences.c  electricsheep-preferences.glade  electricsheep-voter.c  electricsheep-wait.avi  electricsheep.c  electricsheep.desktop.in  electricsheep.desktop.kde  electricsheep.h  electricsheep.man.in  electricsheep.spec.in  electricsheep.xml.in  getdate.c  mkinstalldirs  utils.c
packaging/git-annex/: Annex.hs  Assistant.hs  Backend.hs  CONTRIBUTING  Checks.hs  CmdLine.hs  Command.hs  Common.hs  Config.hs  Creds.hs  Crypto.hs  Fields.hs  Git.hs  GitAnnex.hs  GitAnnexShell.hs  Init.hs  Limit.hs  Locations.hs  Makefile  Messages.hs  Meters.hs  NEWS  Option.hs  README  Remote.hs  Seek.hs  Setup.hs  Types.hs  Upgrade.hs  Usage.hs  configure.hs  ghci  git-annex.cabal  git-annex.hs  git-union-merge.hs  test.hs
packaging/libcompizconfig/: Makefile.am  NEWS  TODO  autogen.sh  configure.ac  libcompizconfig.pc.in
packaging/libdebian-installer/: HACKING  Makefile.am  configure.ac  libdebian-installer-extra.pc.in  libdebian-installer.pc.in
packaging/libept/: CMakeLists.txt  source-tree-root  test.sh
packaging/mklibs/: configure.ac
packaging/udpkg/: .gitignore  DESIGN  TODO  autogen.sh  configure.ac  depends.c  makefile.in  status.c  udpkg.c  udpkg.h
(+51980 files in other folders)
